--- a/src/sass/extra/_seo.sass
+++ b/src/sass/extra/_seo.sass
@@ -35,5 +35,6 @@
 	display: flex
 	flex-direction: column
 	gap: .5rem
+	width: 100%
 	max-width: 44rem
 	margin: 0 auto
